packages/jsii/test/negatives/neg.property-name.3.ts
export class MyClass {
  public getFoo?: number;
}
